[package]
name    = "agent-api"
description = "API generator for the Smart Agent"
version = "0.1.0"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["io-util"] }
async-trait = "0.1"
thiserror = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
clap = "2.34"

netsnmp = { path = "../external/netsnmp/Source/Rust", default-features = false }
rpc = { registry = "si", version = "0.1.25", features = ["serde_cbor"] }

agent_derive = { path = "../agent_derive" }
agent_serde = { path = "../agent_serde" }
agent_utils = { path = "../agent_utils" }
broker-api = { path = "../broker-api" }
nmap = { path = "../nmap" }
protocol = { path = "../protocol" }
snmp_protocol = { path = "../protocols/snmp" }
azure_protocol = { path = "../protocols/azure" }
api_protocol = { path = "../protocols/api" }
etc_base = { path = "../etc_base" }
etc = { path = "../etc" }
value = { path = "../value" }
scheduler = { path = "../scheduler" }
