[package]
name    = "agent"
version = "1.6.0"
authors = [ "Maarten Deprez <mdp@si-int.eu>", "Vincent Stuyck <vst@si-int.eu>" ]
repository = "https://github.com/ContinuousC/SmartAgent.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
serde_cbor = "0.11"
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
rustls = "0.20"
webpki = "0.22"
clap = "2.33"
log = "0.4.14"
simplelog = "0.11.2"

dbschema = { registry = "si", version = "0.1.4" }
rpc = { registry = "si", version = "0.1.21", features = ["serde_cbor"] }
metrics-engine-api = { registry = "si", version = "0.1.1" }
metrics-types = { registry = "si", version = "0.1.0" }

agent-api = { registry = "si", version = "0.1.0" }
broker-api = { registry = "si", version = "0.1.0" }

logger = { path = "../logger" }
agent_utils = { path = "../agent_utils" }
expression = { path = "../expression" }
value = { path = "../value" }
unit = { path = "../unit" }
query = { path = "../query" }
etc = { path = "../etc" }
etc_base = { path = "../etc_base" }
protocol = { path = "../protocol" }
agent_service = { path = "../agent_service" }
scheduler = { path = "../scheduler" }

snmp_protocol = { path = "../protocols/snmp" }
wmi_protocol = { path = "../protocols/wmi" }
api_protocol = { path = "../protocols/api" }
azure_protocol = { path = "../protocols/azure" }
ssh_protocol = { path = "../protocols/ssh" }
powershell_protocol = { path = "../protocols/powershell" }
