[package]
name = "agent_derive"
version = "0.1.1"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
description = "SmartAgent procedural macros"
repository = "https://github.com/ContinuousC/SmartAgent.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1"
quote = "1.0"
