[package]
name = "agent_service"
version = "0.1.0"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent.git"
license = "Elastic-2.0"
edition = "2021"
publish = false


[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
trust-dns-resolver = "0.22"
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0"
futures = "0.3"
nix = "0.22"
log                 = "0.4.14"
simplelog = "0.11.2"

rtnetlink = "0.8"
netlink-proto = "0.7"
netlink-packet-core = "0.2"
netlink-packet-route = "0.8"

netsnmp = { path = "../external/netsnmp/Source/Rust", features = ["tokio"] }
agent-api = { registry = "si", version = "0.1.0" }

nmap = { path = "../nmap" }
agent_serde = { path = "../agent_serde" }
snmp_protocol = { path = "../protocols/snmp" }
azure_protocol = { path = "../protocols/azure" }
api_protocol = { path = "../protocols/api" }
protocol = { path = "../protocol" }
agent_utils = { path = "../agent_utils" }
etc_base = { path = "../etc_base" }
etc = { path = "../etc", features = ["tokio"]}
query = { path = "../query" }
expression = { path = "../expression" }
value = { path = "../value" }
scheduler = { path = "../scheduler" }
parking_lot = "0.12.1"



# simplelog = "0.11.2"
# tokio = { version = "1", features = ["full"] }