[package]
name    = "agent_utils"
description = "SmartAgent utility types and functions"
version = "0.2.1"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[features]
default = ["trust-dns-resolver"]
key-reader = ["dep:key-reader", "tokio"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
nom = "7.0"
tokio = { version = "1", features = ["full"], optional = true }
log = "0.4.14"
trust-dns-resolver = { version = "0.22.0", features = [ "tokio-runtime" ], optional = true }

agent_derive = { registry = "si", version = "0.1", path = "../agent_derive" }
key-reader = { registry = "si", version = "0.1.0", optional = true }
