[package]
name    = "broker-api"
description = "API definitions for the ContinuousC broker"
version = "0.1.0"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "ssh://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["io-util"] }
async-trait = "0.1"
thiserror = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
chrono = { version = "0.4.19", features = ["serde"] }

rpc = { registry = "si", version = "0.1.6", features = ["serde_cbor"] }

# agent_derive = { path = "../agent_derive" }
# agent_serde = { path = "../agent_serde" }
# agent_utils = { path = "../agent_utils" }
