[package]
name    = "broker"
version = "0.99.2"
authors = [ "Maarten Deprez <mdp@si-int.eu>" ]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false


[dependencies]
tokio = { version = "1.0", features = ["io-util","net","sync","signal"] }
#console-subscriber = "0.1.2"
tokio-rustls = "0.23.2"
x509-parser = "0.12.0"
async-trait = "0.1"
serde_cbor = "0.11"
thiserror = "1.0"
thrussh = "0.32"
thrussh-keys = "0.20"
clap = "2.33"
log = "0.4.14"
simplelog = "0.11.2"
chrono = { version = "0.4.19", features = ["serde"] }

rpc = { registry = "si", version = "0.1.20", features = ["serde_cbor"] }

broker-api = { registry = "si", version = "0.1.0" }
ssh = { path = "../ssh" }
