[package]
name    = "etc_base"
description = "ETC id types"
version = "0.1.3"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.85"
thiserror = "1.0"
log = "0.4.17"

agent_utils = { registry = "si", version = "0.2", path = "../agent_utils" }
value = { registry = "si", version = "0.1", path = "../value" }
logger = { registry = "si", version = "0.1", path = "../logger" }
agent_derive = { registry = "si", version = "0.1.1", path = "../agent_derive" }
