[package]
name    = "expression"
description = "SmartAgent expression parser and evaluator"
version = "0.1.8"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
dynfmt = { version = "0.1", features = ["python"] }
serde_json = "1.0"
derivative = "2.2"
thiserror = "1.0"
nom = "7.0"
regex = "1.4"
linked-hash-map = "0.5"

rule-engine = { registry = "si", version = "0.1.32" }
unit = { registry = "si", version = "0.1.3", path = "../unit" }
value = { registry = "si", version = "0.1.8", path = "../value" }
agent_serde = { registry = "si", version = "0.1", path = "../agent_serde" }
agent_utils = { registry = "si", version = "0.2", path = "../agent_utils" }
