[package]
name    = "protocol_daemon"
version = "0.1.0"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false


[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.0", features = [ "fs", "io-util" ] }
clap = { version = "3.2.20", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"
serde_cbor = "0.11.2"
rustls = "0.20.6"
thiserror = "1.0"
log = "0.4.14"

rpc = { registry = "si", version = "0.1.28" }

agent_utils = { path = "../agent_utils", features = ["key-reader"] }
agent_serde = { path = "../agent_serde" }
etc_base = { path = "../etc_base" }
etc = { path = "../etc" }
protocol = { path = "../protocol", features = ["tokio", "rpc"]}
value = { path = "../value" }
futures = "0.3.24"
