[package]
name = "py-lib"
version = "0.1.0"
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cpython = { package = "cpython", version = "0.7", default-features = false, features = ["python27-sys", "serde-convert"] }

expression = { path = "../expression" }
