[package]
name = "py3-lib"
version = "0.1.0"
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module", "serde"] }

expression = { path = "../expression" }
serde = "1.0.179"
serde_json = "1.0.104"
