[package]
name    = "query"
description = "Table query language for SmartAgent"
version = "0.1.3"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
linked-hash-map = "0.5"
linked_hash_set = "0.1.3"
thiserror = "1.0"

value = { registry = "si", version = "0.1.8", path = "../value" }
etc_base = { registry = "si", version = "0.1", path = "../etc_base" }
logger = { registry = "si", version = "0.1", path = "../logger" }
protocol = { registry = "si", version = "0.1", path = "../protocol" }
