[package]
name = "scheduler"
version = "0.1.0"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "sync", "macros", "time"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"

dbschema = { registry = "si", version = "0.1.5" }
metrics-types = { registry = "si", version = "0.1.5" }

etc_base = { path = "../etc_base" }
etc = { path = "../etc" }
nmap = { path = "../nmap" }
protocol = { path = "../protocol" }
query = { path = "../query" }
agent_serde = { path = "../agent_serde" }
agent_utils = { path = "../agent_utils" }
expression = { path = "../expression" }
value = { path = "../value" }
log = "0.4.16"
