[package]
name = "unit"
description = "SmartAgent unit and quantity handling"
version = "0.1.15"
authors = ["Maarten Deprez <mdp@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false


[features]
default = []
serialize_as_string = ["dep:serde_with"]
schemars = ["dep:schemars"]
tsify = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12.0", optional = true }
serde_json = "1.0"
nom = "7.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
schemars = { version = "0.8.21", optional = true }
tsify = { registry = "si", version = "0.4.6", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

[dev-dependencies]
jsonschema = "0.28.1"
