[package]
name = "uritemplate"
version = "0.1.0"
authors = ["vst <vst@si-int.eu>"]
repository = "https://github.com/ContinuousC/SmartAgent"
license = "Elastic-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
serde = {version="1.0", features=["derive"]}
